Carry MediaStreamComponent properties on clone.

Adds a clone() method to MediaStreamComponent that carries over enabled
and muted state which should carry over when cloning a MediaStreamTrack.

MediaStreamTrack's id intentionally does not carry over and remains
unique.

R=guidou@chromium.org,esprehn@chromium.org
BUG=669212

Review-Url: https://codereview.chromium.org/2540263003
Cr-Commit-Position: refs/heads/master@{#435656}

Former-commit-id: b38248f051bc2022527cfb09040050ed15b23d8e